TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "132845872301392" [label="Start"];
  "132845872301392" -> "132845872301872";
  "132845872301872" [label="Code"];
  "132845872301872" -> "132845872305328";
  "132845872305328" [label="Function"];
  "132845872305328" -> "132845872306864";
  "132845872305328" -> "132845872305424";
  "132845872305328" -> "132845872303936";
  "132845872306864" [label="main"];
  "132845872305424" [label="Parameters"];
  "132845872303936" [label="Code"];
  "132845872303936" -> "132845872307296";
  "132845872303936" -> "132845872302496";
  "132845872303936" -> "132845872308640";
  "132845872307296" [label="Scope"];
  "132845872307296" -> "132845872304224";
  "132845872304224" [label="Declaration"];
  "132845872304224" -> "132845872306288";
  "132845872304224" -> "132845872304752";
  "132845872306288" [label="x"];
  "132845872304752" [label="1"];
  "132845872302496" [label="Scope"];
  "132845872302496" -> "132845872300480";
  "132845872300480" [label="Declaration"];
  "132845872300480" -> "132845872307680";
  "132845872300480" -> "132845872308352";
  "132845872307680" [label="x"];
  "132845872308352" [label="2"];
  "132845872308640" [label="Return"];
  "132845872308640" -> "132845872309360";
  "132845872309360" [label="0"];
}
